lancom/plt_project/BlockParser.java
// $ANTLR 3.0.1 /home/sambuddho/plt_project/Block.g 2008-04-18 18:33:08

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;

import org.antlr.runtime.tree.*;

public class BlockParser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "PLUS", "MINUS", "MULT", "DIV", "NUMBER", "NM", "PROG_BEGIN", "PROG_END", "STRING", "ID", "COMMA", "CHAR", "ICMP_MESSAGE_TYPE", "WHITESPACE", "EQUAL", "OBJECT_NAME", "LETTER", "DIGIT", "DOT", "DNS", "GATEWAY", "CHARS", "EscapeSequence", "DELIMITER", "LINE_COMMENT", "IPADDR_BYTE", "'prog'", "'endprog'", "'if'", "'('", "')'", "'else'", "'endif'", "'while'", "'endwhile'", "'echo'", "'?'", "':'", "'||'", "'&&'", "'|'", "'&'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'~'", "'*='", "'/='", "'+='", "'-='", "'topology_type_t'", "'host_type_t'", "'host_group_type_t'", "'serv_group_type_t'", "'role_type_t'", "'policy_type_t'", "'ipaddr_t'", "'int_type_t'", "'char_type_t'", "'inbound'", "'outbound'", "'allow'", "'deny'", "'udp'", "'tcp'", "'ifname'", "'card_id'", "'netmask'", "'host_group'", "'{'", "'}'", "'DNS'", "'GATEWAY'", "'service_set'"
    };
    public static final int LINE_COMMENT=28;
    public static final int LETTER=20;
    public static final int NUMBER=8;
    public static final int CHAR=15;
    public static final int WHITESPACE=17;
    public static final int MULT=6;
    public static final int MINUS=5;
    public static final int ID=13;
    public static final int EOF=-1;
    public static final int DNS=23;
    public static final int OBJECT_NAME=19;
    public static final int IPADDR_BYTE=29;
    public static final int COMMA=14;
    public static final int EQUAL=18;
    public static final int GATEWAY=24;
    public static final int PROG_BEGIN=10;
    public static final int CHARS=25;
    public static final int PLUS=4;
    public static final int PROG_END=11;
    public static final int DIGIT=21;
    public static final int DIV=7;
    public static final int NM=9;
    public static final int DOT=22;
    public static final int EscapeSequence=26;
    public static final int ICMP_MESSAGE_TYPE=16;
    public static final int DELIMITER=27;
    public static final int STRING=12;
    public static final String[] ruleNames = new String[] {
        "invalidRule", "prog", "statement_list", "statement", "statement_expr", 
        "condition_statement", "iteration_statement", "print_statement", 
        "expression", "assignment_expr", "conditional_expr", "logicalOR_expr", 
        "logicalAND_expr", "bitwiseOR_expr", "bitwiseAND_expr", "equality_expr", 
        "relational_expr", "expr", "term", "unary_expr", "postfix_expression", 
        "assignment_operator", "factor", "literal", "declr_stmt", "object_values", 
        "type_name", "role", "policy", "topology", "int_value", "char_value", 
        "direction", "verdict", "proto", "icmp_cntrl_message", "port", "object_name", 
        "interface_name", "ip_addr", "nmask", "host", "host_set", "dns_set", 
        "gateway", "host_group", "serv_descr", "serv_group", "serv_listen_port", 
        "host_name"
    };

    public int ruleLevel = 0;
    public BlockParser(TokenStream input, int port) {
            super(input, port);
            DebugEventSocketProxy proxy =
                new DebugEventSocketProxy(this, port, adaptor);
            setDebugListener(proxy);
            adaptor.setDebugEventListener(proxy);
            try {
                proxy.handshake();
            }
            catch (IOException ioe) {
                reportError(ioe);
            }

    }
    public BlockParser(TokenStream input) {
        this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT);
    }
    public BlockParser(TokenStream input, DebugEventListener dbg) {
        super(input, dbg);
        adaptor.setDebugEventListener(dbg);
    }

    protected boolean evalPredicate(boolean result, String predicate) {
        dbg.semanticPredicate(result, predicate);
        return result;
    }

    protected DebugTreeAdaptor adaptor =
    	  new DebugTreeAdaptor(null,new CommonTreeAdaptor());
    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = new DebugTreeAdaptor(dbg,adaptor);
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }


    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "/home/sambuddho/plt_project/Block.g"; }


        public static void main(String[] args) throws Exception {
            BlockLexer lex = new BlockLexer(new ANTLRFileStream(args[0]));
           	CommonTokenStream tokens = new CommonTokenStream(lex);

            BlockParser parser = new BlockParser(tokens);

            try {
                parser.prog();
            } catch (RecognitionException e)  {
                e.printStackTrace();
            }
        }


    public static class prog_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start prog
    // /home/sambuddho/plt_project/Block.g:31:1: prog : 'prog' ( statement_list )+ 'endprog' -> ^( 'prog_begin' ( statement_list )+ 'prog_end' ) ;
    public final prog_return prog() throws RecognitionException {
        prog_return retval = new prog_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal1=null;
        Token string_literal3=null;
        statement_list_return statement_list2 = null;


        Object string_literal1_tree=null;
        Object string_literal3_tree=null;
        RewriteRuleTokenStream stream_30=new RewriteRuleTokenStream(adaptor,"token 30");
        RewriteRuleTokenStream stream_31=new RewriteRuleTokenStream(adaptor,"token 31");
        RewriteRuleSubtreeStream stream_statement_list=new RewriteRuleSubtreeStream(adaptor,"rule statement_list");
        try { dbg.enterRule("prog");
        if ( ruleLevel==0 ) {dbg.commence();}
        ruleLevel++;
        dbg.location(31, 1);

        try {
            // /home/sambuddho/plt_project/Block.g:32:2: ( 'prog' ( statement_list )+ 'endprog' -> ^( 'prog_begin' ( statement_list )+ 'prog_end' ) )
            dbg.enterAlt(1);

            // /home/sambuddho/plt_project/Block.g:32:4: 'prog' ( statement_list )+ 'endprog'
            {
            dbg.location(32,4);
            string_literal1=(Token)input.LT(1);
            match(input,30,FOLLOW_30_in_prog103); 
            stream_30.add(string_literal1);

            dbg.location(32,11);
            // /home/sambuddho/plt_project/Block.g:32:11: ( statement_list )+
            int cnt1=0;
            try { dbg.enterSubRule(1);

            loop1:
            do {
                int alt1=2;
                try { dbg.enterDecision(1);

                int LA1_0 = input.LA(1);

                if ( (LA1_0==NUMBER||LA1_0==STRING||(LA1_0>=COMMA && LA1_0<=CHAR)||LA1_0==OBJECT_NAME||LA1_0==DELIMITER||LA1_0==32||LA1_0==37||LA1_0==39||LA1_0==52||(LA1_0>=57 && LA1_0<=67)||LA1_0==72||LA1_0==75||LA1_0==80) ) {
                    alt1=1;
                }


                } finally {dbg.exitDecision(1);}

                switch (alt1) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /home/sambuddho/plt_project/Block.g:32:11: statement_list
            	    {
            	    dbg.location(32,11);
            	    pushFollow(FOLLOW_statement_list_in_prog105);
            	    statement_list2=statement_list();
            	    _fsp--;

            	    stream_statement_list.add(statement_list2.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        dbg.recognitionException(eee);

                        throw eee;
                }
                cnt1++;
            } while (true);
            } finally {dbg.exitSubRule(1);}

            dbg.location(32,27);
            string_literal3=(Token)input.LT(1);
            match(input,31,FOLLOW_31_in_prog108); 
            stream_31.add(string_literal3);

            dbg.location(32,37);

            // AST REWRITE
            // elements: PROG_BEGIN, statement_list, PROG_END
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 32:37: -> ^( 'prog_begin' ( statement_list )+ 'prog_end' )
            {
                dbg.location(32,40);
                // /home/sambuddho/plt_project/Block.g:32:40: ^( 'prog_begin' ( statement_list )+ 'prog_end' )
                {
                Object root_1 = (Object)adaptor.nil();
                dbg.location(32,42);
                root_1 = (Object)adaptor.becomeRoot(adaptor.create(PROG_BEGIN, "PROG_BEGIN"), root_1);

                dbg.location(32,55);
                if ( !(stream_statement_list.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_statement_list.hasNext() ) {
                    dbg.location(32,55);
                    adaptor.addChild(root_1, stream_statement_list.next());

                }
                stream_statement_list.reset();
                dbg.location(32,71);
                adaptor.addChild(root_1, adaptor.create(PROG_END, "PROG_END"));

                adaptor.addChild(root_0, root_1);
                }

            }



            }

            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(32, 83);

        }
        finally {
            dbg.exitRule("prog");
            ruleLevel--;
            if ( ruleLevel==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end prog

    public static class statement_list_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start statement_list
    // /home/sambuddho/plt_project/Block.g:34:2: statement_list : ( statement | declr_stmt );
    public final statement_list_return statement_list() throws RecognitionException {
        statement_list_return retval = new statement_list_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        statement_return statement4 = null;

        declr_stmt_return declr_stmt5 = null;



        try { dbg.enterRule("statement_list");
        if ( ruleLevel==0 ) {dbg.commence();}
        ruleLevel++;
        dbg.location(34, 2);

        try {
            // /home/sambuddho/plt_project/Block.g:35:3: ( statement | declr_stmt )
            int alt2=2;
            try { dbg.enterDecision(2);

            int LA2_0 = input.LA(1);

            if ( (LA2_0==NUMBER||LA2_0==STRING||(LA2_0>=COMMA && LA2_0<=CHAR)||LA2_0==OBJECT_NAME||LA2_0==DELIMITER||LA2_0==32||LA2_0==37||LA2_0==39||LA2_0==52||(LA2_0>=66 && LA2_0<=67)||LA2_0==72||LA2_0==75||LA2_0==80) ) {
                alt2=1;
            }
            else if ( ((LA2_0>=57 && LA2_0<=65)) ) {
                alt2=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("34:2: statement_list : ( statement | declr_stmt );", 2, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;
            }
            } finally {dbg.exitDecision(2);}

            switch (alt2) {
                case 1 :
                    dbg.enterAlt(1);

                    // /home/sambuddho/plt_project/Block.g:35:5: statement
                    {
                    root_0 = (Object)adaptor.nil();

                    dbg.location(35,5);
                    pushFollow(FOLLOW_statement_in_statement_list133);
                    statement4=statement();
                    _fsp--;

                    adaptor.addChild(root_0, statement4.getTree());

                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // /home/sambuddho/plt_project/Block.g:36:5: declr_stmt
                    {
                    root_0 = (Object)adaptor.nil();

                    dbg.location(36,5);
                    pushFollow(FOLLOW_declr_stmt_in_statement_list139);
                    declr_stmt5=declr_stmt();
                    _fsp--;

                    adaptor.addChild(root_0, declr_stmt5.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(37, 3);

        }
        finally {
            dbg.exitRule("statement_list");
            ruleLevel--;
            if ( ruleLevel==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end statement_list

    public static class statement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start statement
    // /home/sambuddho/plt_project/Block.g:39:2: statement : ( condition_statement | iteration_statement | statement_expr | print_statement );
    public final statement_return statement() throws RecognitionException {
        statement_return retval = new statement_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        condition_statement_return condition_statement6 = null;

        iteration_statement_return iteration_statement7 = null;

        statement_expr_return statement_expr8 = null;

        print_statement_return print_statement9 = null;



        try { dbg.enterRule("statement");
        if ( ruleLevel==0 ) {dbg.commence();}
        ruleLevel++;
        dbg.location(39, 2);

        try {
            // /home/sambuddho/plt_project/Block.g:40:3: ( condition_statement | iteration_statement | statement_expr | print_statement )
            int alt3=4;
            try { dbg.enterDecision(3);

            switch ( input.LA(1) ) {
            case 32:
                {
                alt3=1;
                }
                break;
            case 37:
                {
                alt3=2;
                }
                break;
            case NUMBER:
            case STRING:
            case COMMA:
            case CHAR:
            case OBJECT_NAME:
            case DELIMITER:
            case 52:
            case 66:
            case 67:
            case 72:
            case 75:
            case 80:
                {
                alt3=3;
                }
                break;
            case 39:
                {
                alt3=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("39:2: statement : ( condition_statement | iteration_statement | statement_expr | print_statement );", 3, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;
            }

            } finally {dbg.exitDecision(3);}

            switch (alt3) {
                case 1 :
                    dbg.enterAlt(1);

                    // /home/sambuddho/plt_project/Block.g:40:5: condition_statement
                    {
                    root_0 = (Object)adaptor.nil();

                    dbg.location(40,5);
                    pushFollow(FOLLOW_condition_statement_in_statement154);
                    condition_statement6=condition_statement();
                    _fsp--;

                    adaptor.addChild(root_0, condition_statement6.getTree());

                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // /home/sambuddho/plt_project/Block.g:41:5: iteration_statement
                    {
                    root_0 = (Object)adaptor.nil();

                    dbg.location(41,5);
                    pushFollow(FOLLOW_iteration_statement_in_statement160);
                    iteration_statement7=iteration_statement();
                    _fsp--;

                    adaptor.addChild(root_0, iteration_statement7.getTree());

                    }
                    break;
                case 3 :
                    dbg.enterAlt(3);

                    // /home/sambuddho/plt_project/Block.g:42:5: statement_expr
                    {
                    root_0 = (Object)adaptor.nil();

                    dbg.location(42,5);
                    pushFollow(FOLLOW_statement_expr_in_statement166);
                    statement_expr8=statement_expr();
                    _fsp--;

                    adaptor.addChild(root_0, statement_expr8.getTree());

                    }
                    break;
                case 4 :
                    dbg.enterAlt(4);

                    // /home/sambuddho/plt_project/Block.g:43:5: print_statement
                    {
                    root_0 = (Object)adaptor.nil();

                    dbg.location(43,5);
                    pushFollow(FOLLOW_print_statement_in_statement172);
                    print_statement9=print_statement();
                    _fsp--;

                    adaptor.addChild(root_0, print_statement9.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(44, 3);

        }
        finally {
            dbg.exitRule("statement");
            ruleLevel--;
            if ( ruleLevel==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end statement

    public static class statement_expr_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start statement_expr
    // /home/sambuddho/plt_project/Block.g:46:2: statement_expr : ( ';' | expression ';' );
    public final statement_expr_return statement_expr() throws RecognitionException {
        statement_expr_return retval = new statement_expr_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal10=null;
        Token char_literal12=null;
        expression_return expression11 = null;


        Object char_literal10_tree=null;
        Object char_literal12_tree=null;

        try { dbg.enterRule("statement_expr");
        if ( ruleLevel==0 ) {dbg.commence();}
        ruleLevel++;
        dbg.location(46, 2);

        try {
            // /home/sambuddho/plt_project/Block.g:47:3: ( ';' | expression ';' )
            int alt4=2;
            try { dbg.enterDecision(4);

            int LA4_0 = input.LA(1);

            if ( (LA4_0==DELIMITER) ) {
                alt4=1;
            }
            else if ( (LA4_0==NUMBER||LA4_0==STRING||(LA4_0>=COMMA && LA4_0<=CHAR)||LA4_0==OBJECT_NAME||LA4_0==52||(LA4_0>=66 && LA4_0<=67)||LA4_0==72||LA4_0==75||LA4_0==80) ) {
                alt4=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("46:2: statement_expr : ( ';' | expression ';' );", 4, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;
            }
            } finally {dbg.exitDecision(4);}

            switch (alt4) {
                case 1 :
                    dbg.enterAlt(1);

                    // /home/sambuddho/plt_project/Block.g:47:5: ';'
                    {
                    root_0 = (Object)adaptor.nil();

                    dbg.location(47,5);
                    char_literal10=(Token)input.LT(1);
                    match(input,DELIMITER,FOLLOW_DELIMITER_in_statement_expr188); 
                    char_literal10_tree = (Object)adaptor.create(char_literal10);
                    adaptor.addChild(root_0, char_literal10_tree);


                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // /home/sambuddho/plt_project/Block.g:48:5: expression ';'
                    {
                    root_0 = (Object)adaptor.nil();

                    dbg.location(48,5);
                    pushFollow(FOLLOW_expression_in_statement_expr194);
                    expression11=expression();
                    _fsp--;

                    adaptor.addChild(root_0, expression11.getTree());
                    dbg.location(48,16);
                    char_literal12=(Token)input.LT(1);
                    match(input,DELIMITER,FOLLOW_DELIMITER_in_statement_expr196); 
                    char_literal12_tree = (Object)adaptor.create(char_literal12);
                    adaptor.addChild(root_0, char_literal12_tree);


                    }
                    break;

            }
            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(49, 3);

        }
        finally {
            dbg.exitRule("statement_expr");
            ruleLevel--;
            if ( ruleLevel==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end statement_expr

    public static class condition_statement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start condition_statement
    // /home/sambuddho/plt_project/Block.g:51:2: condition_statement : 'if' '(' equality_expr ')' statement_list ( 'else' statement_list )? 'endif' ;
    public final condition_statement_return condition_statement() throws RecognitionException {
        condition_statement_return retval = new condition_statement_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal13=null;
        Token char_literal14=null;
        Token char_literal16=null;
        Token string_literal18=null;
        Token string_literal20=null;
        equality_expr_return equality_expr15 = null;

        statement_list_return statement_list17 = null;

        statement_list_return statement_list19 = null;


        Object string_literal13_tree=null;
        Object char_literal14_tree=null;
        Object char_literal16_tree=null;
        Object string_literal18_tree=null;
        Object string_literal20_tree=null;

        try { dbg.enterRule("condition_statement");
        if ( ruleLevel==0 ) {dbg.commence();}
        ruleLevel++;
        dbg.location(51, 2);

        try {
            // /home/sambuddho/plt_project/Block.g:52:3: ( 'if' '(' equality_expr ')' statement_list ( 'else' statement_list )? 'endif' )
            dbg.enterAlt(1);

            // /home/sambuddho/plt_project/Block.g:52:5: 'if' '(' equality_expr ')' statement_list ( 'else' statement_list )? 'endif'
            {
            root_0 = (Object)adaptor.nil();

            dbg.location(52,5);
            string_literal13=(Token)input.LT(1);
            match(input,32,FOLLOW_32_in_condition_statement212); 
            string_literal13_tree = (Object)adaptor.create(string_literal13);
            adaptor.addChild(root_0, string_literal13_tree);

            dbg.location(52,10);
            char_literal14=(Token)input.LT(1);
            match(input,33,FOLLOW_33_in_condition_statement214); 
            char_literal14_tree = (Object)adaptor.create(char_literal14);
            adaptor.addChild(root_0, char_literal14_tree);

            dbg.location(52,14);
            pushFollow(FOLLOW_equality_expr_in_condition_statement216);
            equality_expr15=equality_expr();
            _fsp--;

            adaptor.addChild(root_0, equality_expr15.getTree());
            dbg.location(52,28);
            char_literal16=(Token)input.LT(1);
            match(input,34,FOLLOW_34_in_condition_statement218); 
            char_literal16_tree = (Object)adaptor.create(char_literal16);
            adaptor.addChild(root_0, char_literal16_tree);

            dbg.location(52,32);
            pushFollow(FOLLOW_statement_list_in_condition_statement220);
            statement_list17=statement_list();
            _fsp--;

            adaptor.addChild(root_0, statement_list17.getTree());
            dbg.location(52,47);
            // /home/sambuddho/plt_project/Block.g:52:47: ( 'else' statement_list )?
            int alt5=2;
            try { dbg.enterSubRule(5);
            try { dbg.enterDecision(5);

            int LA5_0 = input.LA(1);

            if ( (LA5_0==35) ) {
                alt5=1;
            }
            } finally {dbg.exitDecision(5);}

            switch (alt5) {
                case 1 :
                    dbg.enterAlt(1);

                    // /home/sambuddho/plt_project/Block.g:52:48: 'else' statement_list
                    {
                    dbg.location(52,48);
                    string_literal18=(Token)input.LT(1);
                    match(input,35,FOLLOW_35_in_condition_statement223); 
                    string_literal18_tree = (Object)adaptor.create(string_literal18);
                    adaptor.addChild(root_0, string_literal18_tree);

                    dbg.location(52,55);
                    pushFollow(FOLLOW_statement_list_in_condition_statement225);
                    statement_list19=statement_list();
                    _fsp--;

                    adaptor.addChild(root_0, statement_list19.getTree());

                    }
                    break;

            }
            } finally {dbg.exitSubRule(5);}

            dbg.location(52,72);
            string_literal20=(Token)input.LT(1);
            match(input,36,FOLLOW_36_in_condition_statement229); 
            string_literal20_tree = (Object)adaptor.create(string_literal20);
            adaptor.addChild(root_0, string_literal20_tree);


            }

            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(53, 3);

        }
        finally {
            dbg.exitRule("condition_statement");
            ruleLevel--;
            if ( ruleLevel==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end condition_statement

    public static class iteration_statement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start iteration_statement
    // /home/sambuddho/plt_project/Block.g:55:2: iteration_statement : 'while' '(' equality_expr ')' statement_list 'endwhile' ;
    public final iteration_statement_return iteration_statement() throws RecognitionException {
        iteration_statement_return retval = new iteration_statement_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal21=null;
        Token char_literal22=null;
        Token char_literal24=null;
        Token string_literal26=null;
        equality_expr_return equality_expr23 = null;

        statement_list_return statement_list25 = null;


        Object string_literal21_tree=null;
        Object char_literal22_tree=null;
        Object char_literal24_tree=null;
        Object string_literal26_tree=null;

        try { dbg.enterRule("iteration_statement");
        if ( ruleLevel==0 ) {dbg.commence();}
        ruleLevel++;
        dbg.location(55, 2);

        try {
            // /home/sambuddho/plt_project/Block.g:56:3: ( 'while' '(' equality_expr ')' statement_list 'endwhile' )
            dbg.enterAlt(1);

            // /home/sambuddho/plt_project/Block.g:56:5: 'while' '(' equality_expr ')' statement_list 'endwhile'
            {
            root_0 = (Object)adaptor.nil();

            dbg.location(56,5);
            string_literal21=(Token)input.LT(1);
            match(input,37,FOLLOW_37_in_iteration_statement245); 
            string_literal21_tree = (Object)adaptor.create(string_literal21);
            adaptor.addChild(root_0, string_literal21_tree);

            dbg.location(56,13);
            char_literal22=(Token)input.LT(1);
            match(input,33,FOLLOW_33_in_iteration_statement247); 
            char_literal22_tree = (Object)adaptor.create(char_literal22);
            adaptor.addChild(root_0, char_literal22_tree);

            dbg.location(56,17);
            pushFollow(FOLLOW_equality_expr_in_iteration_statement249);
            equality_expr23=equality_expr();
            _fsp--;

            adaptor.addChild(root_0, equality_expr23.getTree());
            dbg.location(56,31);
            char_literal24=(Token)input.LT(1);
            match(input,34,FOLLOW_34_in_iteration_statement251); 
            char_literal24_tree = (Object)adaptor.create(char_literal24);
            adaptor.addChild(root_0, char_literal24_tree);

            dbg.location(56,35);
            pushFollow(FOLLOW_statement_list_in_iteration_statement253);
            statement_list25=statement_list();
            _fsp--;
